[gd_scene load_steps=14 format=3 uid="uid://bwtloudkkyc7u"]

[ext_resource type="Script" path="res://game.gd" id="1_p0kg0"]
[ext_resource type="PackedScene" uid="uid://8ymso5l5jqtc" path="res://Assets/Intro/intro.tscn" id="1_ss6hs"]
[ext_resource type="AudioStream" uid="uid://c4fry2pm5qfuo" path="res://Assets/Sounds/VA/Intro1.wav" id="4_3qqgp"]
[ext_resource type="AudioStream" uid="uid://w1gximg8ji4g" path="res://Assets/Sounds/Circuit Hums.mp3" id="4_py1k5"]
[ext_resource type="AudioStream" uid="uid://dd8e5qihvjjkw" path="res://Assets/Music/Tic Toc.mp3" id="5_jjyyk"]
[ext_resource type="AudioStream" uid="uid://cqamir66tt4ci" path="res://Assets/Sounds/Loud Silence.mp3" id="5_qxkuf"]
[ext_resource type="FontFile" uid="uid://6tdxe0ym2ijw" path="res://Assets/BitPotionExt.ttf" id="7_01ukx"]
[ext_resource type="AudioStream" uid="uid://cj1c10e31g0td" path="res://Assets/Music/End of the Line.mp3" id="8_f2a6f"]

[sub_resource type="Animation" id="Animation_dj3xt"]
resource_name = "Begin"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameIntro/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8.2, 13.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameIntro/Voice")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_3qqgp")
}],
"times": PackedFloat32Array(0.9)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameIntro/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.9, 3, 3.1, 3.2, 4.1, 4.3, 6.2, 6.5, 7.2, 7.6, 9.7, 10.09, 10.5, 11.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["", "Sometimes I look into the void,", "Sometimes I look into the void,", "", "and wonder.", "", "If it wouldn't be better to just be there.", "", "Floating.", "", "Unaware.", "Unaware.", "Unaware.?", "Unaware..?", "Unaware...?"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameIntro/Label:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.3, 2.4, 3.1, 3.2, 3.5, 4.1, 4.2, 4.34, 5.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 0.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameIntro/Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 9.4, 13.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GameIntro/Music")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 14.7811,
"start_offset": 0.0,
"stream": ExtResource("5_jjyyk")
}],
"times": PackedFloat32Array(0)
}
tracks/5/use_blend = true
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GameIntro/Music:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1, 10.9, 14.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -33.062]
}
tracks/7/type = "audio"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GameIntro/Audio1")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_py1k5")
}],
"times": PackedFloat32Array(7.6)
}
tracks/7/use_blend = true
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GameIntro/Audio2")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_qxkuf")
}],
"times": PackedFloat32Array(-0.2)
}
tracks/8/use_blend = true
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("GameIntro/Audio2:volume_db")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(11.3, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-4.525, -32.401]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("GameMusic:volume_db")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 14.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-33.237, 0.0]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(6.1, 9.97405),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"spawn_game_world"
}, {
"args": [],
"method": &"play_game_intro"
}]
}

[sub_resource type="Animation" id="Animation_eb3og"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameIntro/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameIntro/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameIntro/Label:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameIntro/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameIntro/Music:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GameIntro/Audio2:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-4.525]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GameMusic:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yum5n"]
_data = {
"Begin": SubResource("Animation_dj3xt"),
"RESET": SubResource("Animation_eb3og")
}

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_sp51q"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4p0wl"]
light_mode = 1

[node name="Game" type="Node2D"]
script = ExtResource("1_p0kg0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yum5n")
}

[node name="Camera2D2" type="Camera2D" parent="."]
zoom = Vector2(7, 7)

[node name="Intro" parent="." instance=ExtResource("1_ss6hs")]

[node name="GameIntro" type="Node2D" parent="."]
z_index = 100

[node name="Music" type="AudioStreamPlayer" parent="GameIntro"]
pitch_scale = 0.72

[node name="Fade" type="TextureRect" parent="GameIntro"]
visible = false
modulate = Color(0, 0, 0, 1)
offset_left = -995.0
offset_top = -770.0
offset_right = 1035.0
offset_bottom = 810.0
texture = SubResource("PlaceholderTexture2D_sp51q")

[node name="Label" type="Label" parent="GameIntro"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_4p0wl")
offset_left = -164.0
offset_top = 55.0
offset_right = 166.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("7_01ukx")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="Voice" type="AudioStreamPlayer" parent="GameIntro"]

[node name="Audio1" type="AudioStreamPlayer" parent="GameIntro"]

[node name="Audio2" type="AudioStreamPlayer" parent="GameIntro"]
volume_db = -4.525

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_f2a6f")

[node name="RestartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="finished_intro" from="Intro" to="." method="_on_intro_finished_intro"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
